# aitg

./: .gitignore  Dockerfile  README.md
.github/workflows/: integration_test.yml
aitg_host/: model.py  util.py
demos/: sfclient.py
demos/codegen_tests/: sfclient.py  sfliterate.py
demos/doctools/: pyproject.toml
demos/doctools/aitg_doctools/: chunk.py  clean.py
demos/doctools/doctools/: chunk.py  clean.py  util.py
demos/semsearcher/: README.md  contractions_test.py  pyproject.toml
demos/semsearcher/semsearcher/: cli.py  semmine.py  srv.py  util.py
demos/semsearcher/test/: paracheck.py
demos/semsearcher/ui/: index.html  searchui.js
demos/semsearcher/ui/asset/: yumsalt.css
demos/summarize_me/: pyproject.toml
demos/summarize_me/summarize_me/: chunk.py  clean.py  cli.py  summgen.py
doc/: docker.md  internals.md  models.md  multi.md  roadmap.md  rocm_gfx8.md  server.md
doc/notebooks/: Finetune_LED_models_for_Summarization.ipynb
doc/notes/: led.md
misc/: clean_summary.py  codegen_gptj_convert.py  delatex_server.py  detex.py  gptj_onnx.py  onnx_opt.py  pytorch_device.py  sample_prompt_1.txt  summarize_me.py
misc/summarize_me/: __main__.py  chunk.py  clean.py
src/: pyproject.toml
src/aitg/: cli.py  model.py  optimize.py  srv.py  t5_cli.py  util.py
src/aitg/gens/: bart_summary_generator.py  bloom_generator.py  classifier_generator.py  embed_generator.py  led_summary_generator.py  qa_generator.py  sfcodegen_generator.py  sliding_generator.py  t5_generator.py
src/aitg/models/: bart_summarizer.py  bloom.py  led__summarizer.py  question_answer.py  sentence_embed.py  sfcodegen.py  t5.py
src/aitg_host/: __init__.py  base_generator.py  cli.py  gpt.py  model.py  old_srv.py  raw_generator.py  sliding_generator.py  srv.py  summarize_srv.py  util.py
src/aitg_host/gens/: bart_summary_generator.py  base.py  classifier_generator.py  embed_generator.py  led_summary_generator.py  qa_generator.py  sliding_generator.py  summary_generator.py  t5_generator.py
src/aitg_host/models/: bart_classifier.py  led__summarizer.py
src/aitg_host/textgen/: base_generator.py  raw_generator.py  sliding_generator.py  summarizer.py
src/docker/: Dockerfile
