[tool.poetry]
name = "aitg_host"
version = "2.2.0"
description = ""
authors = ["xdrie <xdrie@alt.icu>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
torch = "^1.11.0"
transformers = "^4.18.0"
aitextgen = "^0.5.2"
typer = "^0.4.1"
bottle = "^0.12.19"
loguru = "^0.6.0"
colorama = "^0.4.4"
msgpack = "^1.0.2"
lz4 = "^4.0.0"
single-source = "^0.3.0"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cpu = "pip3 install torch==1.11.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
aitg_host_cli = "aitg_host.cli:main"
aitg_host_srv = "aitg_host.srv:main"

aitg_host_download_model = "aitg_host.model:main"
