[tool.poetry]
name = "aitg"
version = "3.0.0"
description = "aitg is a multitool for working with text transformers"
authors = ["redthing1 <redthing1@alt.icu>"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
torch = "^1.11.0"
transformers = "^4.18.0"
aitextgen = "^0.5.2"
typer = "^0.4.1"
bottle = "^0.12.19"
loguru = "^0.6.0"
colorama = "^0.4.4"
msgpack = "^1.0.2"
lz4 = "^4.0.0"
single-source = "^0.3.0"
sentencepiece = "^0.1.96"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
force-cpu = "pip3 install torch==1.11.0+cpu -f https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
aitg_cli = "aitg.cli:main"
aitg_srv = "aitg.srv:main"

aitg_download_model = "aitg.model:main"
