[tool.poetry]
name = "semsearcher"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
doctools = {path = "../doctools", develop = true}
requests = "^2.26.0"
lz4 = "^3.1.3"
typer = "^0.3.2"
colorama = "^0.4.4"
msgpack = "^1.0.2"
numpy = "^1.21.2"
bottle = "^0.12.19"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
semsearcher = "semsearcher.cli:main"
semsearcherui = "semsearcher.srv:main"